--- a/PSs/src/main/resources/templates/indexstudent.html
+++ b/PSs/src/main/resources/templates/indexstudent.html
@@ -11,7 +11,13 @@
 	
 </head>
 <body>
-
+<center>
+<a th:href = "@{/}" class="btn btn-primary btn-sm mb-3"> PS </a>
+	<a th:href = "@{/student}" class="btn btn-primary btn-sm mb-3"> Student </a>
+	<a th:href = "@{/professor}" class="btn btn-primary btn-sm mb-3"> Professor </a>
+	<a th:href = "@{/admin}" class="btn btn-primary btn-sm mb-3"> Admin </a>
+	<a th:href = "@{/deansofficeemployee}" class="btn btn-primary btn-sm mb-3"> DeansOfficeEmployee </a>
+	<p></p></center>
 	<div class="container my-2">
 	<h1>Students List</h1>
 	
@@ -21,15 +27,15 @@
 			<thead>
 				<tr>
 					<th>
-						<a th:href="@{'/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
+						<a th:href="@{'/pagestudent/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
 							Student First Name</a>
 					</th>
 					<th>
-					<a th:href="@{'/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
+					<a th:href="@{'/pagestudent/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
 							Student Last Name</a>
 					</th>
 					<th>
-					<a th:href="@{'/page/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
+					<a th:href="@{'/pagestudent/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
 							Student Email</a>
 					</th>
 					<th> Actions </th>
@@ -40,7 +46,7 @@
 					<td th:text="${student.firstName}"></td>
 					<td th:text="${student.lastName}"></td>
 					<td th:text="${student.email}"></td>
-					<td> <a th:href="@{/showFormForUpdate/{id}(id=${student.id})}" class="btn btn-primary">Update</a>
+					<td> <a th:href="@{/showFormForUpdateStudent/{id}(id=${student.id})}" class="btn btn-primary">Update</a>
 					    <a th:href="@{/deleteStudent/{id}(id=${student.id})}" class="btn btn-danger">Delete</a>
 					</td>
 				</tr>
@@ -54,17 +60,17 @@
 				</div>
 				<div class = "col-sm-1">
 					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-						<a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+						<a th:if="${currentPage != i}" th:href="@{'/pagestudent/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
 						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
 					</span>
 				</div>
 				<div class = "col-sm-1">
-					<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+					<a th:if="${currentPage < totalPages}" th:href="@{'/pagestudent/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
 					<span th:unless="${currentPage < totalPages}">Next</span>
 				</div>
 				
 				 <div class="col-sm-1">
-    				<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+    				<a th:if="${currentPage < totalPages}" th:href="@{'/pagestudent/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
 					<span th:unless="${currentPage < totalPages}">Last</span>
    				 </div>
 			</div>
