--- a/PSs/src/main/resources/templates/new_professor.html
+++ b/PSs/src/main/resources/templates/new_professor.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Student Management System</title>
+<title>Professor Management System</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -10,27 +10,27 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Student Management System</h1>
+		<h1>Professor Management System</h1>
 		<hr>
-		<h2>Save Student</h2>
+		<h2>Save Professor</h2>
 
-		<form action="#" th:action="@{/saveStudent}" th:object="${student}"
+		<form action="#" th:action="@{/saveProfessor}" th:object="${professor}"
 			method="POST">
 			<input type="text" th:field="*{firstName}"
-				placeholder="Student First Name" class="form-control mb-4 col-4">
+				placeholder="Professor First Name" class="form-control mb-4 col-4">
 				
 				<input type="text" th:field="*{lastName}"
-				placeholder="Student Last Name" class="form-control mb-4 col-4">
+				placeholder="Professor Last Name" class="form-control mb-4 col-4">
 				
 				<input type="text" th:field="*{email}"
-				placeholder="Student Email" class="form-control mb-4 col-4">
+				placeholder="Professor Email" class="form-control mb-4 col-4">
 				
-				<button type="submit" class="btn btn-info col-2"> Save Student</button>
+				<button type="submit" class="btn btn-info col-2"> Save Professor</button>
 		</form>
 		
 		<hr>
 		
-		<a th:href = "@{/}"> Back to Student List</a>
+		<a th:href = "@{/professor}"> Back to Professor List</a>
 	</div>
 </body>
 </html>
