--- a/PSs/src/main/resources/templates/update_admin.html
+++ b/PSs/src/main/resources/templates/update_admin.html
@@ -2,18 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Student Management System</title>
+<title>Admin Management System</title>
 
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
 	<div class="container">
-		<h1>Student Management System</h1>
+		<h1>Admin Management System</h1>
 		<hr>
-		<h2>Update Student</h2>
+		<h2>Update Admin</h2>
 
-		<form action="#" th:action="@{/saveStudent}" th:object="${student}"
+		<form action="#" th:action="@{/saveAdmin}" th:object="${admin}"
 			method="POST">
 			
 			<!-- Add hidden form field to handle update -->
@@ -25,12 +25,12 @@
 				
 				<input type="text" th:field="*{email}" class="form-control mb-4 col-4">
 				
-				<button type="submit" class="btn btn-info col-2"> Update Student</button>
+				<button type="submit" class="btn btn-info col-2"> Update Admin</button>
 		</form>
 		
 		<hr>
 		
-		<a th:href = "@{/}"> Back to Student List</a>
+		<a th:href = "@{/}"> Back to Admin List</a>
 	</div>
 </body>
 </html>
