Added Term model, repo, service and service impl + enums

--- a/PSs/src/main/resources/templates/index.html
+++ b/PSs/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
 <a th:href = "@{/professor}" class="btn btn-primary btn-sm mb-3"> Professor </a>
     <a th:href = "@{/admin}" class="btn btn-primary btn-sm mb-3"> Admin </a>
     <a th:href = "@{/deansofficeemployee}" class="btn btn-primary btn-sm mb-3"> DeansOfficeEmployee </a>
+    <a th:href="@{/faculty}" class="btn btn-primary btn-sm mb-3"> Faculty </a>
 <center>
 </header>
 <p></p>
