--- a/PSs/src/main/resources/templates/indexadmin.html
+++ b/PSs/src/main/resources/templates/indexadmin.html
@@ -19,7 +19,7 @@
 	<a th:href = "@{/deansofficeemployee}" class="btn btn-primary btn-sm mb-3"> DeansOfficeEmployee </a>
 	<p></p></center>
 	<div class="container my-2">
-	<h1>Admins List</h1>
+	<h1>Faculty List</h1>
 	
 	<a th:href = "@{/showNewAdminForm}" class="btn btn-primary btn-sm mb-3"> Add Admin </a>
 	
