--- a/PSs/src/main/resources/templates/index.html
+++ b/PSs/src/main/resources/templates/index.html
@@ -1,31 +1,148 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<link href="styl.css" rel="stylesheet">
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
-<meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <title>PS</title>
 </head>
 <body>
-<header><center>
-<h1>PS Management System</h1>
-    <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
-    <a th:href = "@{/}" class="btn btn-primary btn-sm mb-3"> PS </a>
-<a th:href = "@{/student}" class="btn btn-primary btn-sm mb-3"> Student </a>
-<a th:href = "@{/professor}" class="btn btn-primary btn-sm mb-3"> Professor </a>
-    <a th:href = "@{/admin}" class="btn btn-primary btn-sm mb-3"> Admin </a>
-    <a th:href = "@{/deansofficeemployee}" class="btn btn-primary btn-sm mb-3"> DeansOfficeEmployee </a>
-    <a th:href="@{/faculty}" class="btn btn-primary btn-sm mb-3"> Faculty </a>
-<center>
+<header>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+        <div class="container-fluid">
+            <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-mdb-toggle="collapse"
+                    data-mdb-target="#navbarExample01"
+                    aria-controls="navbarExample01"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarExample01">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" aria-current="page" href = "index.html">PS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="student">Student</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="professor">Professor</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin">Admin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="deansofficeemployee">Deans Office Employee</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="faculty">Faculty</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar -->
+
+    <!-- Background image -->
+    <div
+            class="p-5 text-center bg-image"
+            style="
+          background-image: url('https://ug.edu.pl/sites/ug.edu.pl/files/_nodes/strona/97498/images/ug2.jpg');
+          height: 400px;
+          margin-top: 58px;
+        "
+    >
+        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="text-white">
+                    <h1 class="mb-3">Student's Portal</h1>
+                    <h4 class="mb-3">University of Gdańsk</h4>
+                    <a class="btn btn-outline-light btn-lg" href="#!" role="button"
+                    >Perfect place</a
+                    >
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Background image -->
 </header>
-<p></p>
+
+
 <center>
-<img src="https://campustechnology.com/-/media/EDU/CampusTechnology/2021-images/20210121collegestudents.jpg" width="800px" heigh="400px">
- <p></p>
+    <div id="portfolio" class="container-fluid text-center bg-grey">
+        <h2>University</h2><br>
+        <h4>How it looks like</h4>
+        <div class="row text-center slideanim">
+            <div class="col-sm-4">
+                <div class="thumbnail">
+                    <img src="https://www.worldisbeautiful.eu/up_files/1622-Uniwersytet-Gdanski.jpg" alt="Paris" width="400" height="300">
+                    <p><strong>UG</strong></p>
+                    <p>Amazing</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="thumbnail">
+                    <img src="https://www.worldisbeautiful.eu/up_files/1622-Uniwersytet-Gdanski.jpg" alt="New York" width="400" height="300">
+                    <p><strong>UG</strong></p>
+                    <p>Perfect</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="thumbnail">
+                    <img src="https://www.worldisbeautiful.eu/up_files/1622-Uniwersytet-Gdanski.jpg" alt="San Francisco" width="400" height="300">
+                    <p><strong>UG</strong></p>
+                    <p>Lovely</p>
+                </div>
+            </div>
+        </div><br>
+
+        <h2>What students say</h2>
+        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <h4>"I work at google!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
+                </div>
+                <div class="item">
+                    <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
+                </div>
+                <div class="item">
+                    <h4>"Best Experience!"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+</center>
 <footer>
 Projekt Zespołowy-Alicja Olejnik i Julia Komorowska
 </footer>
-</center>
+</body>
+</html>
