--- a/PSs/src/main/resources/templates/indexadmin.html
+++ b/PSs/src/main/resources/templates/indexadmin.html
@@ -11,13 +11,70 @@
 	
 </head>
 <body>
-<center>
-<a th:href = "@{/}" class="btn btn-primary btn-sm mb-3"> PS </a>
-<a th:href = "@{/student}" class="btn btn-primary btn-sm mb-3"> Student </a>
-<a th:href = "@{/professor}" class="btn btn-primary btn-sm mb-3"> Professor </a>
-	<a th:href = "@{/admin}" class="btn btn-primary btn-sm mb-3"> Admin </a>
-	<a th:href = "@{/deansofficeemployee}" class="btn btn-primary btn-sm mb-3"> DeansOfficeEmployee </a>
-	<p></p></center>
+<header>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+		<div class="container-fluid">
+			<button
+					class="navbar-toggler"
+					type="button"
+					data-mdb-toggle="collapse"
+					data-mdb-target="#navbarExample01"
+					aria-controls="navbarExample01"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+			>
+				<i class="fas fa-bars"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarExample01">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" aria-current="page" href = "index.html">PS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="student">Student</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="professor">Professor</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="admin">Admin</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="deansofficeemployee">Deans Office Employee</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="faculty">Faculty</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- Navbar -->
+
+	<!-- Background image -->
+	<div
+			class="p-5 text-center bg-image"
+			style="
+          background-image: url('https://ug.edu.pl/sites/ug.edu.pl/files/_nodes/strona/97498/images/ug2.jpg');
+          height: 400px;
+          margin-top: 58px;
+        "
+	>
+		<div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+			<div class="d-flex justify-content-center align-items-center h-100">
+				<div class="text-white">
+					<h1 class="mb-3">Student's Portal</h1>
+					<h4 class="mb-3">University of Gda?sk</h4>
+					<a class="btn btn-outline-light btn-lg" href="#!" role="button"
+					>Perfect place</a
+					>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Background image -->
+</header>
 	<div class="container my-2">
 	<h1>Faculty List</h1>
 	
