--- a/PSs/src/main/resources/templates/indexfaculty.html
+++ b/PSs/src/main/resources/templates/indexfaculty.html
@@ -8,24 +8,85 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
-<center>
-    <a th:href = "@{/}" class="btn btn-primary btn-sm mb-3"> PS </a>
-    <a th:href = "@{/student}" class="btn btn-primary btn-sm mb-3"> Student </a>
-    <a th:href = "@{/professor}" class="btn btn-primary btn-sm mb-3"> Professor </a>
-    <a th:href = "@{/admin}" class="btn btn-primary btn-sm mb-3"> Admin </a>
-    <a th:href = "@{/deansofficeemployee}" class="btn btn-primary btn-sm mb-3"> DeansOfficeEmployee </a>
-    <a th:href="@{/faculty}" class="btn btn-primary btn-sm mb-3"> Faculty </a>
-    <p></p></center>
+<header>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+        <div class="container-fluid">
+            <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-mdb-toggle="collapse"
+                    data-mdb-target="#navbarExample01"
+                    aria-controls="navbarExample01"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarExample01">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" aria-current="page" href="index.html">PS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="student">Student</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="professor">Professor</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin">Admin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="deansofficeemployee">Deans Office Employee</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="faculty">Faculty</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar -->
+
+    <!-- Background image -->
+    <div
+            class="p-5 text-center bg-image"
+            style="
+          background-image: url('https://ug.edu.pl/sites/ug.edu.pl/files/_nodes/strona/97498/images/ug2.jpg');
+          height: 400px;
+          margin-top: 58px;
+        "
+    >
+        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="text-white">
+                    <h1 class="mb-3">Student's Portal</h1>
+                    <h4 class="mb-3">University of Gda?sk</h4>
+                    <a class="btn btn-outline-light btn-lg" href="#!" role="button"
+                    >Perfect place</a
+                    >
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Background image -->
+</header>
 <div class="container my-2">
     <h1>Faculties List</h1>
 
 
-    <a th:href = "@{/showNewFacultyForm}" class="btn btn-primary btn-sm mb-3"> Add a faculty </a>
+    <a th:href="@{/showNewFacultyForm}" class="btn btn-primary btn-sm mb-3"> Add a faculty </a>
 
-    <table border="1" class = "table table-striped table-responsive-md">
+    <table border="1" class="table table-striped table-responsive-md">
         <thead>
         <tr>
             <th>
@@ -44,7 +105,7 @@
                 <a th:href="@{'/pagefaculty/' + ${currentPage} + '?sortField=dean&sortDir=' + ${reverseSortDir}}">
                     Dean</a>
             </th>
-            <th> Actions </th>
+            <th> Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -53,31 +114,34 @@
             <td th:text="${Faculty.address}"></td>
             <td th:text="${Faculty.dean}"></td>
             <td th:text="${Faculty.professors}"></td>
-            <td> <a th:href="@{/showFormForUpdateFaculty/{id}(id=${Faculty.id})}" class="btn btn-primary">Update</a>
+            <td><a th:href="@{/showFormForUpdateFaculty/{id}(id=${Faculty.id})}" class="btn btn-primary">Update</a>
                 <a th:href="@{/deletePFaculty/{id}(id=${Faculty.id})}" class="btn btn-danger">Delete</a>
             </td>
         </tr>
         </tbody>
     </table>
 
-    <div th:if = "${totalPages > 1}">
-        <div class = "row col-sm-10">
-            <div class = "col-sm-2">
+    <div th:if="${totalPages > 1}">
+        <div class="row col-sm-10">
+            <div class="col-sm-2">
                 Total Rows: [[${totalItems}]]
             </div>
-            <div class = "col-sm-1">
+            <div class="col-sm-1">
 					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-						<a th:if="${currentPage != i}" th:href="@{'/pagefaculty/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+						<a th:if="${currentPage != i}"
+                           th:href="@{'/pagefaculty/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
 						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
 					</span>
             </div>
-            <div class = "col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/pagefaculty/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+            <div class="col-sm-1">
+                <a th:if="${currentPage < totalPages}"
+                   th:href="@{'/pagefaculty/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
                 <span th:unless="${currentPage < totalPages}">Next</span>
             </div>
 
             <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/pagefaculty/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                <a th:if="${currentPage < totalPages}"
+                   th:href="@{'/pagefaculty/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
                 <span th:unless="${currentPage < totalPages}">Last</span>
             </div>
         </div>
