Student System with Degree

--- a/PSs/src/main/resources/templates/update_student.html
+++ b/PSs/src/main/resources/templates/update_student.html
@@ -8,26 +8,95 @@
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+<header>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+		<div class="container-fluid">
+			<button
+					class="navbar-toggler"
+					type="button"
+					data-mdb-toggle="collapse"
+					data-mdb-target="#navbarExample01"
+					aria-controls="navbarExample01"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+			>
+				<i class="fas fa-bars"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarExample01">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" aria-current="page" href="index.html">PS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="student">Student</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="professor">Professor</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="admin">Admin</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="deansofficeemployee">Deans Office Employee</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="faculty">Faculty</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- Navbar -->
+
+	<!-- Background image -->
+	<div
+			class="p-5 text-center bg-image"
+			style="
+          background-image: url('https://ug.edu.pl/sites/ug.edu.pl/files/_nodes/strona/97498/images/ug2.jpg');
+          height: 400px;
+          margin-top: 58px;
+        "
+	>
+		<div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+			<div class="d-flex justify-content-center align-items-center h-100">
+				<div class="text-white">
+					<h1 class="mb-3">Student's Portal</h1>
+					<h4 class="mb-3">University of Gdansk</h4>
+					<a class="btn btn-outline-light btn-lg" href="#!" role="button"
+					>Perfect place</a
+					>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Background image -->
+</header>
 	<div class="container">
 		<h1>Student Management System</h1>
 		<hr>
 		<h2>Update Student</h2>
+		<form action="#" th:action="@{/updateStudent}" th:object="${student}"
+			  method="POST">
+			<input type="number" th:field="*{id}"
+				   placeholder="Id" >
+			<input type="text" th:field="*{firstName}"
+				   placeholder="Student First Name" >
 
-		<form action="#" th:action="@{/saveStudent}" th:object="${student}"
-			method="POST">
-			
-			<!-- Add hidden form field to handle update -->
-			<input type="hidden" th:field="*{id}" />
-			
-			<input type="text" th:field="*{firstName}" class="form-control mb-4 col-4">
-				
-				<input type="text" th:field="*{lastName}" class="form-control mb-4 col-4">
-				
-				<input type="text" th:field="*{email}" class="form-control mb-4 col-4">
-				
-				<button type="submit" class="btn btn-info col-2"> Update Student</button>
+			<input type="text" th:field="*{lastName}"
+				   placeholder="Student Last Name">
+
+			<input type="text" th:field="*{email}"
+				   placeholder="Student Email">
+
+			<select th:field="*{degree}">
+				<option th:each="degree : ${degrees}" th:value="${degree}" th:text="${degree}"></option>
+			</select>
+
+			<button type="submit" > Save Student</button>
 		</form>
-		
+
+
 		<hr>
 		
 		<a th:href = "@{/}"> Back to Student List</a>
