--- a/PSs/src/main/resources/templates/index.html
+++ b/PSs/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
             <div class="d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
                     <h1 class="mb-3">Student's Portal</h1>
-                    <h4 class="mb-3">University of Gdańsk</h4>
+                    <h4 class="mb-3">University of Gdansk</h4>
                     <a class="btn btn-outline-light btn-lg" href="#!" role="button"
                     >Perfect place</a
                     >
