--- a/PSs/src/main/resources/templates/indexstudent.html
+++ b/PSs/src/main/resources/templates/indexstudent.html
@@ -65,7 +65,7 @@
             <div class="d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
                     <h1 class="mb-3">Student's Portal</h1>
-                    <h4 class="mb-3">University of Gda?sk</h4>
+                    <h4 class="mb-3">University of Gdansk</h4>
                     <a class="btn btn-outline-light btn-lg" href="#!" role="button"
                     >Perfect place</a
                     >
@@ -75,66 +75,34 @@
     </div>
     <!-- Background image -->
 </header>
-<div class="container my-2">
-    <h1>Students List</h1>
+<table class="table  table-dark">
+    <thead>
+    <tr>
+        <th scope="col">Id</th>
+        <th scope="col">FirstName</th>
+        <th scope="col">LastName</th>
+        <th scope="col">Email</th>
+        <th scope="col">Degree</th>
+        <th scope="col">Delete</th>
+        <th scope="col">Update</th>
 
-    <a th:href="@{/showNewStudentForm}" class="btn btn-primary btn-sm mb-3"> Add Student </a>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="student : ${allStudentsFromDB}">
+        <td th:text="${student.id}"></td>
+        <td th:text="${student.firstName}"></td>
+        <td th:text="${student.lastName}"></td>
+        <td th:text="${student.email}"></td>
+        <td th:text="${#strings.listJoin(student.degree, ',')}"></td>
+        <td><a th:href="@{/deleteStudent/{id}(id=${student.id})}" >Delete</a></td>
+        <td><a th:href="@{/showFormForUpdateStudent/{id}(id=${student.id})}">Update</a></td>
+    </tr>
+    </tbody>
+</table>
+<center>
+<h2><a  th:href = "@{/showNewStudentForm}" color="black"> New Student</a></h2>
+</center>
 
-    <table border="1" class="table table-striped table-responsive-md">
-        <thead>
-        <tr>
-            <th>
-                <a th:href="@{'/pagestudent/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
-                    Student First Name</a>
-            </th>
-            <th>
-                <a th:href="@{'/pagestudent/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
-                    Student Last Name</a>
-            </th>
-            <th>
-                <a th:href="@{'/pagestudent/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
-                    Student Email</a>
-            </th>
-            <th> Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="student : ${listStudents}">
-            <td th:text="${student.firstName}"></td>
-            <td th:text="${student.lastName}"></td>
-            <td th:text="${student.email}"></td>
-            <td><a th:href="@{/showFormForUpdateStudent/{id}(id=${student.id})}" class="btn btn-primary">Update</a>
-                <a th:href="@{/deleteStudent/{id}(id=${student.id})}" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-
-    <div th:if="${totalPages > 1}">
-        <div class="row col-sm-10">
-            <div class="col-sm-2">
-                Total Rows: [[${totalItems}]]
-            </div>
-            <div class="col-sm-1">
-					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-						<a th:if="${currentPage != i}"
-                           th:href="@{'/pagestudent/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
-					</span>
-            </div>
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}"
-                   th:href="@{'/pagestudent/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
-                <span th:unless="${currentPage < totalPages}">Next</span>
-            </div>
-
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}"
-                   th:href="@{'/pagestudent/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
-                <span th:unless="${currentPage < totalPages}">Last</span>
-            </div>
-        </div>
-    </div>
-</div>
 </body>
 </html>
