Student With Good database

--- a/PSs/src/main/resources/templates/indexfaculty.html
+++ b/PSs/src/main/resources/templates/indexfaculty.html
@@ -51,6 +51,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="faculty">Faculty</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="adress">Adress</a>
+                    </li>
                 </ul>
             </div>
         </div>
