--- a/PSs/src/main/resources/templates/indexadmin.html
+++ b/PSs/src/main/resources/templates/indexadmin.html
@@ -46,6 +46,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="faculty">Faculty</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="adress">Adress</a>
+					</li>
 				</ul>
 			</div>
 		</div>
