--- a/PSs/src/main/resources/templates/indexadress.html
+++ b/PSs/src/main/resources/templates/indexadress.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Student Management System</title>
+    <title>Adress Management System</title>
 
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -46,9 +46,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="faculty">Faculty</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="adress">Adress</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -82,31 +79,28 @@
     <thead>
     <tr>
         <th scope="col">Id</th>
-        <th scope="col">FirstName</th>
-        <th scope="col">LastName</th>
-        <th scope="col">Email</th>
-        <th scope="col">Degree</th>
-        <th scope="col">Address</th>
+        <th scope="col">City</th>
+        <th scope="col">Street</th>
+        <th scope="col">Postal Code</th>
         <th scope="col">Delete</th>
         <th scope="col">Update</th>
 
     </tr>
     </thead>
     <tbody>
-    <tr th:each="student : ${allStudentsFromDB}">
-        <td th:text="${student.id}"></td>
-        <td th:text="${student.firstName}"></td>
-        <td th:text="${student.lastName}"></td>
-        <td th:text="${student.email}"></td>
-        <td th:text="${#strings.listJoin(student.degree, ',')}"></td>
-        <td th:text="${student.adress.city}"></td>
-        <td><a th:href="@{/deleteStudent/{id}(id=${student.id})}" >Delete</a></td>
-        <td><a th:href="@{/showFormForUpdateStudent/{id}(id=${student.id})}">Update</a></td>
+    <tr th:each="adress : ${allAdresssFromDB}">
+        <td th:text="${adress.id}"></td>
+        <td th:text="${adress.city}"></td>
+        <td th:text="${adress.streetnumber}"></td>
+        <td th:text="${adress.postalcode}"></td>
+
+        <td><a th:href="@{/deleteAdress/{id}(id=${adress.id})}" >Delete</a></td>
+        <td><a th:href="@{/showFormForUpdateAdress/{id}(id=${adress.id})}">Update</a></td>
     </tr>
     </tbody>
 </table>
 <center>
-<h2><a  th:href = "@{/showNewStudentForm}" color="black"> New Student</a></h2>
+<h2><a  th:href = "@{/showNewAdressForm}" color="black"> New Adress</a></h2>
 </center>
 
 </body>
