--- a/PSs/src/main/resources/templates/new_adress.html
+++ b/PSs/src/main/resources/templates/new_adress.html
@@ -2,13 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Student Management System</title>
-
+    <title>Adress Management System</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
-
 </head>
 <body>
 <header>
@@ -78,36 +76,36 @@
     </div>
     <!-- Background image -->
 </header>
-<table class="table  table-dark">
-    <thead>
-    <tr>
-        <th scope="col">Id</th>
-        <th scope="col">FirstName</th>
-        <th scope="col">LastName</th>
-        <th scope="col">Email</th>
-        <th scope="col">Degree</th>
-        <th scope="col">Address</th>
-        <th scope="col">Delete</th>
-        <th scope="col">Update</th>
+<div class="container">
+    <h1>Adress Management System</h1>
+    <hr>
+    <h2>Save Adress</h2>
 
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="student : ${allStudentsFromDB}">
-        <td th:text="${student.id}"></td>
-        <td th:text="${student.firstName}"></td>
-        <td th:text="${student.lastName}"></td>
-        <td th:text="${student.email}"></td>
-        <td th:text="${#strings.listJoin(student.degree, ',')}"></td>
-        <td th:text="${student.adress.city}"></td>
-        <td><a th:href="@{/deleteStudent/{id}(id=${student.id})}" >Delete</a></td>
-        <td><a th:href="@{/showFormForUpdateStudent/{id}(id=${student.id})}">Update</a></td>
-    </tr>
-    </tbody>
-</table>
-<center>
-<h2><a  th:href = "@{/showNewStudentForm}" color="black"> New Student</a></h2>
-</center>
+    <form action="#" th:action="@{/addAdress}" th:object="${adress}"
+          method="POST">
+       
+        <input type="text" th:field="*{city}"
+               placeholder="Adress City" >
 
+        <input type="text" th:field="*{streetnumber}"
+               placeholder="Adress Street">
+
+        <input type="text" th:field="*{postalcode}"
+               placeholder="Adress Postal Code">
+
+
+        <button type="submit"> Save Adress</button>
+
+        <div th:if="${#fields.hasErrors('*')}">
+            <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
+        </div>
+
+    </form>
+
+
+    <hr>
+
+    <a th:href="@{/adress}"> Back to Adress List</a>
+</div>
 </body>
 </html>
