--- a/PSs/src/main/resources/templates/new_student.html
+++ b/PSs/src/main/resources/templates/new_student.html
@@ -44,6 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="faculty">Faculty</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="adress">Adress</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -95,6 +98,9 @@
         <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
         <select th:field="*{degree}">
             <option th:each="degree : ${degrees}" th:value="${degree}" th:text="${degree}"></option>
+        </select>
+        <select th:field="*{adress}">
+            <option th:each="adress : ${adresses}" th:value="${adress.id}" th:text="${adress.city}"></option>
         </select>
 
         <button type="submit"> Save Student</button>
