--- a/PSs/src/main/resources/templates/new_professor.html
+++ b/PSs/src/main/resources/templates/new_professor.html
@@ -1,36 +1,120 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Professor Management System</title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
+	<meta charset="ISO-8859-1">
+	<title>Student Management System</title>
+	<link rel="stylesheet"
+		  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+		  crossorigin="anonymous">
 </head>
 <body>
-	<div class="container">
-		<h1>Professor Management System</h1>
-		<hr>
-		<h2>Save Professor</h2>
+<header>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+		<div class="container-fluid">
+			<button
+					class="navbar-toggler"
+					type="button"
+					data-mdb-toggle="collapse"
+					data-mdb-target="#navbarExample01"
+					aria-controls="navbarExample01"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+			>
+				<i class="fas fa-bars"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarExample01">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" aria-current="page" href="index.html">PS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="student">Student</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="professor">Professor</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="admin">Admin</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="deansofficeemployee">Deans Office Employee</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="faculty">Faculty</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="adress">Adress</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- Navbar -->
 
-		<form action="#" th:action="@{/saveProfessor}" th:object="${professor}"
-			method="POST">
-			<input type="text" th:field="*{firstName}"
-				placeholder="Professor First Name" class="form-control mb-4 col-4">
-				
-				<input type="text" th:field="*{lastName}"
-				placeholder="Professor Last Name" class="form-control mb-4 col-4">
-				
-				<input type="text" th:field="*{email}"
-				placeholder="Professor Email" class="form-control mb-4 col-4">
-				
-				<button type="submit" class="btn btn-info col-2"> Save Professor</button>
-		</form>
-		
-		<hr>
-		
-		<a th:href = "@{/professor}"> Back to Professor List</a>
+	<!-- Background image -->
+	<div
+			class="p-5 text-center bg-image"
+			style="
+          background-image: url('https://ug.edu.pl/sites/ug.edu.pl/files/_nodes/strona/97498/images/ug2.jpg');
+          height: 400px;
+          margin-top: 58px;
+        "
+	>
+		<div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+			<div class="d-flex justify-content-center align-items-center h-100">
+				<div class="text-white">
+					<h1 class="mb-3">Student's Portal</h1>
+					<h4 class="mb-3">University of Gdansk</h4>
+					<a class="btn btn-outline-light btn-lg" href="#!" role="button"
+					>Perfect place</a
+					>
+				</div>
+			</div>
+		</div>
 	</div>
+	<!-- Background image -->
+</header>
+<div class="container">
+	<h1>Professor Management System</h1>
+	<hr>
+	<h2>Save Professor</h2>
+
+	<form action="#" th:action="@{/saveProfessor}" th:object="${professor}"
+		  method="POST">
+		<label>
+			<input type="text" th:field="*{firstName}"
+				   placeholder="Professor First Name">
+		</label>
+		<div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">FirstName error</div>
+		<br>
+		<label>
+			<input type="text" th:field="*{lastName}"
+				   placeholder="Professor Last Name">
+		</label>
+		<div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">LastName error</div>
+		<br>
+		<input type="text" th:field="*{email}"
+			   placeholder="Professor Email">
+		<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
+		<br>
+		<select th:field="*{degree}">
+			<option th:each="degree : ${degrees}" th:value="${degree}" th:text="${degree}"></option>
+		</select>
+		<br>
+		<button type="submit"> Save Professor</button>
+
+		<div th:if="${#fields.hasErrors('*')}">
+			<p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
+		</div>
+
+	</form>
+
+
+	<hr>
+
+	<a th:href="@{/professor}"> Back to Professor List</a>
+</div>
 </body>
 </html>
