Student One to many to  fix please

--- a/PSs/src/main/resources/templates/index.html
+++ b/PSs/src/main/resources/templates/index.html
@@ -144,6 +144,7 @@
         </div>
     </div>
 </center>
+<a href="class">Add and Show Classes</a>
 <footer>
 Projekt Zespołowy-Alicja Olejnik i Julia Komorowska
 </footer>
