--- a/PSs/src/main/resources/templates/indexclass.html
+++ b/PSs/src/main/resources/templates/indexclass.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Student Management System</title>
+
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
+
 </head>
 <body>
 <header>
@@ -76,58 +78,37 @@
     </div>
     <!-- Background image -->
 </header>
-<div class="container">
-    <h1>Student Management System</h1>
-    <hr>
-    <h2>Save Student</h2>
-
-    <form action="#" th:action="@{/addStudent}" th:object="${student}"
-          method="POST">
-        <label>
-            <input type="text" th:field="*{firstName}"
-                   placeholder="Student First Name">
-        </label>
-        <div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">FirstName error</div>
-        <br>
-        <label>
-            <input type="text" th:field="*{lastName}"
-                   placeholder="Student Last Name">
-        </label>
-        <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">LastName error</div>
-        <br>
-        <input type="text" th:field="*{email}"
-               placeholder="Student Email">
-        <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
-        <br>
-        <select th:field="*{degree}">
-            <option th:each="degree : ${degrees}" th:value="${degree}" th:text="${degree}"></option>
-        </select>
-        <br>
-        <select th:field="*{adress}">
-            <option th:each="adress : ${adresses}" th:value="${adress.id}"
-                    th:text="${adress.streetnumber} + ' '+ ${adress.postalcode}"></option>
-        </select>
-        <p></p>
-
-        <select th:field="*{classes}" class="form-control" multiple="multiple">
-            <option th:each="classes: ${classess}" th:value="${classes.id}" th:text="${classes.name}"></option>
-        </select>
+<table class="table  table-dark">
+    <thead>
+    <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">Max Amount</th>
+        <th scope="col">Current Amount</th>
 
 
+        <th scope="col">Delete</th>
+        <th scope="col">Update</th>
 
-        <br>
-        <button type="submit"> Save Student</button>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="class : ${allClasssFromDB}">
+        <td th:text="${class.id}"></td>
+        <td th:text="${class.name}"></td>
+        <td th:text="${class.description}"></td>
 
-        <div th:if="${#fields.hasErrors('*')}">
-            <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
-        </div>
+        <td th:text="${class.maxAmountOfStudents}"></td>
+        <td th:text="${class.currentAmountOfStudents}"></td>
+        <td><a th:href="@{/deleteClass/{id}(id=${class.id})}" >Delete</a></td>
+        <td><a th:href="@{/showFormForUpdateClass/{id}(id=${class.id})}">Update</a></td>
+    </tr>
+    </tbody>
+</table>
+<center>
+<h2><a  th:href = "@{/showNewClassForm}" color="black"> New Class</a></h2>
+</center>
 
-    </form>
-
-
-    <hr>
-
-    <a th:href="@{/student}"> Back to Student List</a>
-</div>
 </body>
 </html>
