--- a/PSs/src/main/resources/templates/show_student.html
+++ b/PSs/src/main/resources/templates/show_student.html
@@ -101,20 +101,16 @@
     <td th:text="${student.lastName}"></td>
     <td th:text="${student.email}"></td>
     <td th:text="${#strings.listJoin(student.degree, ',')}"></td>
-    <td th:text="${student.adress.city}"></td>
+    <td th:text="${student.adress.streetnumber}"></td>
     <td><span th:each="class,iterStat : ${studentClasses}">
 					<span th:text="${class.name}"/><th:block th:if="${!iterStat.last}">,</th:block>
 				</span></td>
     <td><a th:href="@{/deleteStudent/{id}(id=${student.id})}">Delete</a></td>
     <td><a th:href="@{/showFormForUpdateStudent/{id}(id=${student.id})}">Update</a></td>
+    <td><a th:href="@{/#}">Add a new class</a></td>
 
     </tbody>
 </table>
-<h1>classes: </h1>
-<ul th:each="class : ${studentClasses}">
-    <li th:text="${class.name}"></li>
-    <li th:text="${class.id}"></li>
-</ul>
 <center>
     <h2><a th:href="@{/student}" color="black"> Back to student list</a></h2>
 </center>
